Finalizando projeto + botão Reset
Inclusão do botão "Reset" e finalização do design da página

--- a/index.html
+++ b/index.html
@@ -10,8 +10,14 @@
 </head>
 
 <body>
-    <h1>SNAKE GAME 🎮🐍</h1>
-    <canvas id="snake" width="512" height="512"></canvas>
+
+    <div class="cabecalho">
+    <h1>🎮 SNAKE GAME 🐍</h1>
+    <input class="buttonReset" type="button" value="Reset" onclick="window.location.reload()">
+    </div>
+
+    <canvas id="snake" width="512" height="512" style="border: 5px #2F4F4F solid"></canvas>
+
 </body>
 
 </html>
